--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
     "require": {
         "php": "~7.2.0|~7.3.0|~7.4.0|~8.1.0|~8.2.0|~8.3.0|~8.4.0",
         "magento/module-backend": "100.0.*|100.1.*|100.2.*|101.0.*|102.0.*",
-        "magento/framework": "100.0.*|100.1.*|101.0.*|102.0.*|103.0.*",
-        "magepal/magento2-core": ">=1.1.11"
+        "magento/framework": "100.0.*|100.1.*|101.0.*|102.0.*|103.0.*"
     },
     "suggest": {
         "kamlesh-khuti/magento2-universal-password":"Magento2 Universal Password"
