Composer file Changes

--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
     "keywords": [
         "magento 2",
         "magento2",
-        "Universal Password"
+        "Universal Password",
         "Magento2 Universal Password",
         "Magento2 Universal Password Free",
-        "Magento2 Universal Password Github",
+        "Magento2 Universal Password Github"
     ],
     "repositories": [
         {
