Composer file Changes

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "Universal Password",
         "Magento2 Universal Password",
         "Magento2 Universal Password Free",
+        "Magento2 Universal Password For Customer Login Free",
         "Magento2 Universal Password Github"
     ],
     "repositories": [
